# breizhctf-2024

./: .gitignore  .gitlab-ci.yml  README.md
.gitlab/merge_request_templates/: new_challenge.md
Autres/bienvenue/: challenge.yml
Crypto/ChiffrementdeSarce/: README.md  challenge.yml
Crypto/Minefinder/: README.md  challenge.yml
Crypto/RandomGuesser/: README.md  challenge.yml  docker-compose.yml
Crypto/SquareOrNot/: README.md  challenge.yml
Forensic/DockerInstall/: README.md  challenge.yml
Forensic/Stolen/: .gitattributes  README.md  challenge.yml
Forensic/Tampered/: .gitattributes  .gitignore  README.md  challenge-PARTIE-1.yml  challenge-PARTIE-2.yml
Forensic/The_Intrepid/: .gitattributes  README.md  challenge_partie_1.yml  challenge_partie_2.yml  challenge_partie_3.yml  challenge_partie_4.yml
GameHacking/: .gitattributes
GameHacking/AWellKeptSecret/: README.md  challenge.yml
GameHacking/AgeOfFire/: README.md  challenge.yml
GameHacking/OnlyUp/: README.md  challenge.yml
GameHacking/TheSwordBridge/: README.md  challenge.yml
GameHacking/src/: .vsconfig  Galahad Quest.sln  (+3 more)
Reverse/DontBeAngry/src/: CMakeLists.txt  Dockerfile  README.md  benchmark.py  build.sh  custom_hash.c  custom_hash.h  file_decoder.c  file_decoder.h  gen_enc_file.py  main.c
Reverse/GotYou/src/: CMakeLists.txt  Dockerfile  build.sh  gen_flag.py  main.c
Reverse/GotYou/src/glibc-2.39/elf/: dl-lookup.c
Reverse/GotYou/src/glibc-2.39/io/: Makefile  Versions  hell_funcs.c  hell_funcs.h
Reverse/NanoGunner/src/: CMakeLists.txt  Dockerfile  build.sh  main.cpp  main.h  vm.cpp  vm.h
(+474 files in other folders)
